[DASHBOARD] Adding trello widgets + fixing scrollbar glitch on twitch widgets

--- a/front/app/src/app/components/trello/trello-base/trello-base.component.css
+++ b/front/app/src/app/components/trello/trello-base/trello-base.component.css
@@ -1,11 +1,15 @@
 .trello-background {
-    background-color: #cce7e8;
-    border: 6px solid #b9a3e3;
+    background-color: #0A64B4;
+    border: 6px solid #53A9F6;
     border-radius: 10px;
 }
 
 #trello-logo {
     margin-top: 2%;
-    width: 45%;
+    width: 30%;
     height: auto;
+}
+
+#scrollbar::-webkit-scrollbar {
+    display: none;
 }
