--- a/front/app/src/app/components/twitch/twitch-base/twitch-base.component.css
+++ b/front/app/src/app/components/twitch/twitch-base/twitch-base.component.css
@@ -9,3 +9,7 @@
     width: 15%;
     height: auto;
 }
+
+#scrollbar::-webkit-scrollbar {
+    display: none;
+}
